--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <style>
         @font-face {
             font-family: 'Fontin-Regular';
-            src: url('Fontin-Regular.otf');
+            src: url('cmunrm.otf');
         }
         @font-face {
             font-family: 'Fontin-Bold';
-            src: url('Fontin-Bold.otf');
+            src: url('cmunbx.otf');
         }
         @font-face {
             font-family: 'Fontin-Italic';
@@ -199,7 +199,7 @@ padding-left: 0;
 
     <h2>Publications</h2>
     <ul>
-    <li>Luca Matteis, Ruben Verborgh. &ldquo;<a href="Hosting Queryable and Highly Available Linked Data for Free.pdf">Hosting Queryable and Highly Available Linked Data for Free</a>.&rdquo; <em>Developers Workshop (ISWC-dev) at ISWC 2014 (to appear)</em> (2014).</li>
+    <li>Luca Matteis, Ruben Verborgh. &ldquo;<a href="http://ceur-ws.org/Vol-1268/paper3.pdf">Hosting Queryable and Highly Available Linked Data for Free</a>.&rdquo; <em>ISWC Developers Workshop (ISWC-dev) at ISWC 2014</em> (2014).</li>
     <li>Luca Matteis. &ldquo;<a href="http://arxiv.org/pdf/1408.6691v1.pdf">VoID-graph: Visualize Linked Datasets on the Web</a>.&rdquo; <em>arXiv preprint arXiv:1408.6691</em> (2014).</li>
     <li>Luca Matteis. &ldquo;<a href="http://arxiv.org/pdf/1408.4793v1.pdf">Restpark: Minimal RESTful API for Retrieving RDF Triples.</a>&rdquo; <em>arXiv preprint arXiv:1408.4793</em> (2013).</li>
     <li>Luca Matteis, Pierre-Yves Chibon, Herlin Espinosa, Milko Skofic, Richard Finkers, Richard Bruskiewich, Glenn Hyman, and Elizabeth Arnaud. &ldquo;<a href="http://ceur-ws.org/Vol-979/WS_s4biodiv2013_paper_4.pdf">Crop Ontology: Vocabulary For Crop-related Concepts.</a>&rdquo; <em>Semantics for Biodiversity Workshop (S4BioDiv 2013) at ESWC 2013.</em> (2013): 37.</li>
