had to change font

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
         <style>
         @font-face {
             font-family: 'Fontin-Regular';
-            src: url('cmunrm.otf');
+            src: url('Fontin-Regular.otf');
         }
         @font-face {
             font-family: 'Fontin-Bold';
-            src: url('cmunbx.otf');
+            src: url('Fontin-Bold.otf');
         }
         @font-face {
             font-family: 'Fontin-Italic';
             src: url('Fontin-Italic.otf');
         }
         body {
-            font-family: 'Verdana';
-            font-size: 12px;
+            font-family: 'Fontin-Regular';
+            font-size: 13px;
 
         }
         #wrap {
