--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@ padding-left: 0;
 
     <hr/>
 
+    <p property="rdfs:comment">
+    I'm passionate about the Semantic Web and interfaces that autonomosly shape from RDF structures. Specifically I'm interested in technologies that enable information from different sources to be easily combined such as Linked Data. I work for a future where data can be seamlessly connected to other data, enabling the creation of a distributed multidisciplinary database.
+    </p>
 
     <h2>Publications</h2>
     <ul>
@@ -137,6 +140,7 @@ padding-left: 0;
         <li>Luca Matteis. &ldquo;<a property="foaf:publications" href="http://arxiv.org/pdf/1408.4793v1.pdf">Restpark: Minimal RESTful API for Retrieving RDF Triples.</a>&rdquo; <em>arXiv preprint arXiv:1408.4793</em> (2013).</li>
         <li>Luca Matteis, Pierre-Yves Chibon, Herlin Espinosa, Milko Skofic, Richard Finkers, Richard Bruskiewich, Glenn Hyman, and Elizabeth Arnaud. &ldquo;<a property="foaf:publications" href="http://ceur-ws.org/Vol-979/WS_s4biodiv2013_paper_4.pdf">Crop Ontology: Vocabulary For Crop-related Concepts.</a>&rdquo; <em>Semantics for Biodiversity Workshop (S4BioDiv 2013) at ESWC 2013.</em> (2013): 37.</li>
     </ul>
+
 
     <h2>Other</h2>
     <ul>
