--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@ padding-left: 0;
     </ul>
 
 
+    <h2>Projects</h2>
+    <dl>
+      <dt><a property="foaf:currentProject" href="http://lmatteis.github.io/ldstatic/">LDstatic</a></dt>
+      <dd>Linked Data that can be hosted on GitHub Pages.</dd>
+      <dt><a property="foaf:currentProject" href="http://lmatteis.github.io/void-graph/">VoID graph</a></dt>
+      <dd>Linked Data cloud in your browser using JavaScript and SVG.</dd>
+    </dl>
+
+
     <h2>Other</h2>
     <ul>
         <li><a property="foaf:homepage" href="http://scholar.google.com/citations?user=4shOPsgAAAAJ">Google Scholar</a></li>
