--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ padding-left: 0;
         <a href="http://lucaa.org/">http://lucaa.org/</a> (I contain RDFa)
     </p>
     <p class="section none">
-        <span property="foaf:mbox">lmatteis -at- gmail.com</span>
+        <span property="foaf:mbox">matteis -at- di.uniroma1.it
+</span>
         <span class="left">email</span>
     </p>
 
