--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@ padding-left: 0;
     <hr/>
 
     <p property="rdfs:comment">
-    I'm passionate about the Semantic Web and interfaces that autonomosly shape from RDF structures. Specifically I'm interested in technologies that enable information from different sources to be easily combined such as Linked Data. I work for a future where data can be seamlessly connected to other data, enabling the creation of a distributed multidisciplinary database.
-    </p>
+I'm passionate about the Semantic Web and interfaces that autonomosly shape from RDF structures. Specifically I'm interested in technologies that enable information from different sources to be easily combined such as Linked Data. My end goal is to help people answer complicated questions. Questions that cannot be answered by Google or other search engines because they require large quantities of interconnected data from multiple fields.    </p>
 
     <h2>Publications</h2>
     <ul>
