--- a/index.html
+++ b/index.html
@@ -8,21 +8,10 @@
 >
     <title>Luca Matteis</title>
     <head>
+        <link rel="stylesheet" type="text/css" href="http://static.tumblr.com/t2pq5bl/gewnb4n3k/font.css" />
         <style>
-        @font-face {
-            font-family: 'Fontin-Regular';
-            src: url('Fontin-Regular.otf');
-        }
-        @font-face {
-            font-family: 'Fontin-Bold';
-            src: url('Fontin-Bold.otf');
-        }
-        @font-face {
-            font-family: 'Fontin-Italic';
-            src: url('Fontin-Italic.otf');
-        }
         body {
-            font-family: 'Fontin-Regular';
+	          font: 400 "Whitney SSm A","Whitney SSm B","Georgia","Times New Roman",serif;
             font-size: 13px;
 
         }
