--- a/index.html
+++ b/index.html
@@ -8,90 +8,7 @@
 >
     <title>Luca Matteis</title>
     <head>
-        <link rel="stylesheet" type="text/css" href="http://static.tumblr.com/t2pq5bl/gewnb4n3k/font.css" />
-        <style>
-        body {
-            font-size: 13px;
-
-        }
-        #wrap {
-            width: 530px;
-            margin:auto;
-            margin-bottom:100px;
-            margin-top: 100px;
-        }
-        * {
-            font-weight: normal;
-            position: relative;
-        }
-        a {
-            color: #0433FF;
-            text-decoration: none;
-        }
-        h1 {
-            font-size: 24px;
-        }
-        h1.title{
-            margin-bottom: 0px;
-            padding-bottom: 0px;
-        }
-        h2 {
-            margin-top:30px;
-        }
-        h2.subtitle {
-            margin-top: 0px;
-            margin-top:0px;
-            font-size: 14px;
-        }
-        h3 {
-            margin-bottom: 10px;
-        }
-        h3 small {
-            font-weight: normal;
-            font-family: "Fontin-Regular";
-        }
-        p.section {
-            margin-top:0;
-            margin-bottom:7px;
-        }
-        p.section.none {
-            margin:0;
-        }
-        hr {
-            border:0;
-            height: 30px;
-
-        }
-        .left, .date {
-            position: absolute;
-            top:3px;
-            color:#58595b;
-            left:-80px;
-            font-size: 10px;
-            line-height: 1;
-            width: 70px;
-            display: block;
-            text-align: right;
-
-        }
-        .date .small {
-        display: block;
-        }
-        ul li h3 {
-            margin:0;
-            font-family: "Fontin-Bold";
-            padding:0;
-        }
-        ul li h4 {
-            margin:0;
-            padding:0;
-        }
-        ul {
-        list-style: none;
-margin-left: 0;
-padding-left: 0;
-        }
-        </style>
+        <link rel="stylesheet" type="text/css" href="font.css" />
     </head>
 <body typeof="foaf:Person" about="http://lucaa.org/">
 <div id="wrap">
