--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <hr/>
 
     <p property="rdfs:comment">I'm passionate about the Semantic Web and interfaces that autonomously shape from RDF structures. Specifically I'm interested in technologies that enable information from different sources to be easily combined such as Linked Data. My end goal is to help people answer complicated questions. Questions that cannot be answered by Google or other search engines because they require large quantities of interconnected data from multiple sources. </p>
-    <p property="rdfs:comment">I'm also interested in peer-to-peer (P2P) technologies which have been exploited for sharing large files (BitTorrent), for live communication (Skype), and for digital currency (Bitcoin). However, P2P technologies have not been exploited for sharing small resources such as HTML files. My passion and possibly my future research goal is to investigate whether a new Web can be built using P2P methods rather than client-server models.  </p>
+    <p property="rdfs:comment">I'm also interested in peer-to-peer (P2P) technologies which have been exploited for sharing large files (BitTorrent), for live communication (Skype), and for digital currency (Bitcoin). However, P2P technologies have not been exploited for a miriad of other applications where decentralization is needed. My passion and possibly my future research goal is to investigate whether applications that have been successful in the client-server model (Facebook, Reddit, Twitter) can be built in a trustless manner using P2P networks.</p>
 
     <h2>Publications</h2>
     <ul>
