--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Luca Matteis, Aidan Hogan, Roberto Navigli. &ldquo;<a property="foaf:publication
 
 
     <h2>Other</h2>
-    <ul>
+    <ul class="nomargin">
         <li><a property="foaf:homepage" href="http://scholar.google.com/citations?user=4shOPsgAAAAJ">Google Scholar</a></li>
         <li><a property="foaf:homepage" href="http://stackoverflow.com/users/50394/luca-matteis">Stack Overflow</a></li>
         <li><a property="foaf:homepage" href="https://github.com/lmatteis">GitHub</a></li>
@@ -69,6 +69,7 @@ Luca Matteis, Aidan Hogan, Roberto Navigli. &ldquo;<a property="foaf:publication
         <li><a property="foaf:homepage" href="https://twitter.com/lmatteis">Twitter</a></li>
 
     </ul>
+    <div style="display:none;">
     <h3>Data publishing</h3>
 <ul>
 <li>Partitioning strategies for publishing queryable Linked Data.</li>
@@ -103,8 +104,9 @@ Luca Matteis, Aidan Hogan, Roberto Navigli. &ldquo;<a property="foaf:publication
 <li>Compression algorithms for RDF.</li>
 <li>Synchronizing RDF datasets.</li>
 </ul>
+</div>
 
-    <div style="display:none;" property="foaf:knows" resource="http://aidanhogan.com/foaf.rdf"></div>
+    <div style="display:none;" property="foaf:knows" resource="http://aidanhogan.com/foaf.rdf#me"></div>
     <div style="display:none;" property="foaf:knows" resource="http://www.kjetil.kjernsmo.net/foaf#me"></div>
 
 
