--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <hr/>
 
     <p class="section" property="rdfs:comment">
-        Researcher at the Department of Computer Science<br>
-        University of Rome &ldquo;La Sapienza&rdquo;
+        
     </p>
 
 
@@ -28,7 +27,7 @@
         <a href="http://lucaa.org/">http://lucaa.org/</a> (I contain RDFa)
     </p>
     <p class="section none">
-        <span property="foaf:mbox">matteis -at- di.uniroma1.it
+        <span property="foaf:mbox">lmatteis -at- gmail.com
 </span>
         <span class="left">email</span>
     </p>
