added ACL workshop paper

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         <li>
 Luca Matteis, Aidan Hogan, Roberto Navigli. &ldquo;<a property="foaf:publications" href="docs/keyword-navigation-ldow2015.pdf">Keyword-Based Navigation and Search over the Linked Data Web</a>&rdquo;. In the Proceedings of the <em>Linked Data on the Web Workshop (LDOW 2015) at WWW 2015, Florence, Italy, May 19, 2015</em>.
         </i>
+        <li>
+McCrae, John P., Philipp Cimiano, Victor Rodrıguez Doncel, Daniel Vila-Suero, Jorge Gracia, Luca Matteis, Roberto Navigli et al. &ldquo;<a property="foaf:publications" href="http://www.aclweb.org/anthology/W/W15/W15-42.pdf#page=51">Reconciling Heterogeneous Descriptions of Language Resources</a>&rdquo;. ACL-IJCNLP 2015 (2015): 39.        </i>
         <li>Luca Matteis, Ruben Verborgh. &ldquo;<a property="foaf:publications" href="http://ceur-ws.org/Vol-1268/paper3.pdf">Hosting Queryable and Highly Available Linked Data for Free</a>.&rdquo; <em>ISWC Developers Workshop (ISWC-dev) at ISWC 2014</em> (2014).</li>
         <li>Luca Matteis. &ldquo;<a property="foaf:publications" href="http://arxiv.org/pdf/1408.6691v1.pdf">VoID-graph: Visualize Linked Datasets on the Web</a>.&rdquo; <em>arXiv preprint arXiv:1408.6691</em> (2014).</li>
         <li>Luca Matteis. &ldquo;<a property="foaf:publications" href="http://arxiv.org/pdf/1408.4793v1.pdf">Restpark: Minimal RESTful API for Retrieving RDF Triples.</a>&rdquo; <em>arXiv preprint arXiv:1408.4793</em> (2013).</li>
