--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
     <h2>Publications</h2>
     <ul>
         <li>
+Luca Matteis. &ldquo;<a property="foaf:publications" href="docs/kudos.pdf">Kudos: A Peer-to-Peer Discussion System
+Based on Social Voting</a>&rdquo;. <em>July, 2015</em>.
+        </i>
+        <li>
 Luca Matteis, Aidan Hogan, Roberto Navigli. &ldquo;<a property="foaf:publications" href="docs/keyword-navigation-ldow2015.pdf">Keyword-Based Navigation and Search over the Linked Data Web</a>&rdquo;. In the Proceedings of the <em>Linked Data on the Web Workshop (LDOW 2015) at WWW 2015, Florence, Italy, May 19, 2015</em>.
         </i>
         <li>
